// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldGranularity Component should export select options: toolbarFieldOptions 1`] = `
Array [
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"current\\"})",
    "value": "july",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"June\\"})",
    "value": "june",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"May\\"})",
    "value": "may",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"April\\"})",
    "value": "april",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"March\\"})",
    "value": "march",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"February\\"})",
    "value": "february",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"January\\"})",
    "value": "january",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"December 2018\\"})",
    "value": "december",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"November 2018\\"})",
    "value": "november",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"October 2018\\"})",
    "value": "october",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"September 2018\\"})",
    "value": "september",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"August 2018\\"})",
    "value": "august",
  },
]
`;

exports[`ToolbarFieldGranularity Component should handle updating granularity through redux state: dispatch date range 1`] = `
Array [
  Array [
    Array [
      Object {
        "granularity": "daily",
        "type": "SET_QUERY_RHSM_granularity",
        "viewId": "toolbarFieldRangeGranularity",
      },
      Object {
        "beginning": "2019-07-01T00:00:00.000Z",
        "type": "SET_QUERY_RHSM_beginning",
        "viewId": "toolbarFieldRangeGranularity",
      },
      Object {
        "ending": "2019-07-31T23:59:59.999Z",
        "type": "SET_QUERY_RHSM_ending",
        "viewId": "toolbarFieldRangeGranularity",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldGranularity Component should render a non-connected component: non-connected 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {\\"context\\":\\"granularity\\"})"
  ariaLabel="Select option"
  className=""
  id="generatedid-"
  isDisabled={false}
  isToggleText={true}
  maxHeight={250}
  name={null}
  onSelect={[Function]}
  options={
    Array [
      Object {
        "selected": true,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"current\\"})",
        "value": "july",
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"June\\"})",
        "value": "june",
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"May\\"})",
        "value": "may",
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"April\\"})",
        "value": "april",
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"March\\"})",
        "value": "march",
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"February\\"})",
        "value": "february",
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"January\\"})",
        "value": "january",
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"December 2018\\"})",
        "value": "december",
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"November 2018\\"})",
        "value": "november",
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"October 2018\\"})",
        "value": "october",
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"September 2018\\"})",
        "value": "september",
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"August 2018\\"})",
        "value": "august",
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {\\"context\\":\\"granularity\\"})"
  selectedOptions="t(curiosity-toolbar.granularityRange, {\\"context\\":\\"current\\"})"
  toggleIcon={null}
  variant="single"
/>
`;
